SERVER-94144 $documents in $lookup fails to parse with query stats (#29250)

GitOrigin-RevId: dc4847e2ef858c147fddaa8339b7a6a1fc846f79