src/mongo/db/pipeline/document_source_lookup.cpp
@@ -1092,7 +1092,8 @@ void DocumentSourceLookUp::serializeToArray(std::vector<Value>& array,
         }
         if (opts.transformIdentifiers ||
             opts.literalPolicy != LiteralSerializationPolicy::kUnchanged) {
-            return Pipeline::parse(*_userPipeline, _fromExpCtx)->serializeToBson(opts);
+            return Pipeline::parse(*_userPipeline, _fromExpCtx, lookupPipeValidator)
+                ->serializeToBson(opts);
         }
         if (opts.serializeForQueryAnalysis) {
             // If we are in query analysis, encrypted fields will have been marked in the
